cambio de letras

--- a/CV/Todo html/index.html
+++ b/CV/Todo html/index.html
@@ -21,7 +21,7 @@
      
       <header>
         <h1>Nicolas Martinez</h1>
-        <p><h2>Estudianteee</h2></p>
+        <p><h2>Estudiante</h2></p>
       </header>
      </section>
     
